# Sortinghat_Benchmark_Replication

./: .gitignore  AutoGluon_predictions.csv  Dockerfile  Downstream_Benchmark.py  Featurize.py  Load_Predictions.py  Tables.ipynb  downstream_models.py  output.txt  pyproject.toml  requirements copy.txt  requirements.txt  run.py  run_feature_predictions.py  submission.json
AutogluonSource/: default_learner.py
Metadata/: metadata.csv
notebooks/: Downstream-Benchmark.ipynb
results/: predictions.csv  results.csv  results_0-16.csv  results_1.csv  results_2.csv  results_21.csv  results_3.csv  results_4.csv  results_5.csv  results_6.csv  results_agl.csv  results_b.csv  results_reg.csv
testdata/: test.csv
